当发生OOM时，直接干掉该程序  -XX:OnOutOfMemoryError=kill -9 %p